# whspr_stellar

./: .dockerignore  .env.example  .gitignore  ADMIN_PASSWORD_RESET.md  CLAUDE.md  CONFLICT_RESOLUTION.md  CONFLICT_RESOLVED.md  E2E_ACCEPTANCE_CRITERIA.md  E2E_IMPLEMENTATION_SUMMARY.md  E2E_TEST_QUICK_REF.md  E2E_TEST_SETUP.md  EVENT_SCHEMAS.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_NOTES.md  IMPLEMENTATION_SEP10_CONTACT_IMPORT_FRAUD.md  IMPLEMENTATION_SUMMARY.md  IP_WHITELIST.md  IP_WHITELIST_CHECKLIST.md  IP_WHITELIST_IMPLEMENTATION.md  IP_WHITELIST_QUICK_REF.md  MODERATION_SUMMARY.md  NOTIFICATION_SYSTEM.md  PLATFORM_CONFIG.md  PRIVACY_IMPLEMENTATION_SUMMARY.md  PROJECT_STATUS.txt  PR_DESCRIPTION.md  QUICKSTART.md  QUICK_START_GUIDE.md  RBAC_IMPLEMENTATION.md  README.backend.md  README.md  README_ADDITION.md  REPORTS_API_DOCUMENTATION.md  REPORTS_IMPLEMENTATION.md  REPORTS_IMPLEMENTATION_SUMMARY.md  REPORTS_QUICKSTART.md  REPORTS_TESTING_GUIDE.md  ROOM_MODERATION.md  ROOM_MODERATION_IMPLEMENTATION.md  ROOM_MODERATION_QUICK_START.md  (+31 more)
contracts/: .env.local  .env.mainnet  .env.testnet  .gitignore  Cargo.toml  GAS_BENCHMARKS.md  Makefile  PR_ACCESS_CONTROL.md  README.md  tarpaulin.toml
contracts/Transaction Fee Management Contract/: Cargo.toml  contract.rs  errors.rs  events.rs  integration_tests.rs  lib.rs  storage.rs  types.rs  unit_tests.rs
contracts/airdrop/: lib.rs
contracts/bridge_adapter/: Cargo.toml
contracts/bridge_adapter/src/: lib.rs  test.rs
contracts/contracts/airdrop_distribution/: Cargo.toml
contracts/contracts/contact_management/: Cargo.toml
contracts/contracts/dao_treasury/: Cargo.toml
contracts/contracts/encryption_key_registry/: Cargo.toml
contracts/contracts/escrow_payment/: Cargo.toml
contracts/contracts/group_management/: Cargo.toml  README.md
contracts/contracts/hello_world/: Cargo.toml
contracts/contracts/messaging_registry/: Cargo.toml
contracts/contracts/multisig_wallet/: Cargo.toml  IMPLEMENTATION.md  README.md
contracts/contracts/nft_marketplace/: Cargo.toml
contracts/contracts/private_payments/: Cargo.toml
contracts/contracts/staking_rewards/: Cargo.toml
contracts/contracts/token/: Cargo.toml
contracts/contracts/token_gating/: Cargo.toml
contracts/contracts/user_registry/: Cargo.toml  (+1 more)
contracts/deployments/: registry.json
contracts/dispute_resolution_contract/: Cargo.toml
contracts/docs/: audit-package.md  cross-contract-call-patterns.md  deployment-runbook.md  internal-security-review.md  rollback-procedure.md  threat-model.md  upgrade-guide.md
contracts/flash_loan_contract/: Cargo.toml
contracts/gasless-common/: Cargo.toml
contracts/integration-tests/: Cargo.toml
contracts/messaging/: Cargo.toml
contracts/payments/: Cargo.toml
contracts/recurring-subscriptions/: Cargo.toml
contracts/rooms/: Cargo.toml
contracts/scripts/: build-contracts.sh  deploy-all.sh  deploy-contract.sh  fund-testnet-account.sh  rollback-contract.sh  update-registry.py  upgrade-contract-safe.sh  upgrade-contract.sh  verify-deployment.sh
contracts/whsper_stellar/: CLAIM_WINDOW_IMPLEMENTATION.md  Cargo.toml  EVENTS.md  EVENT_IMPLEMENTATION_SUMMARY.md  README.md
contracts/xp/: Cargo.toml
(+2683 files in other folders)
