[workspace]
resolver = "2"
members = [
    "gasless-common",
    "contracts/*",
]

[workspace.dependencies]
soroban-sdk = "=22.0.1"
soroban-token-sdk = "=22.0.1"
gasless-common = { path = "gasless-common" }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
