[package]
name = "whsper_stellar"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]

soroban-sdk = { version = "21.0.0", features = ["alloc"] }
base64ct = { version = "=1.6.0" }
time = { version = "=0.3.36" }

[dev-dependencies]
soroban-sdk = { version = "21.0.0", features = ["testutils"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
