[package]
name = "multisig-wallet"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "multisig_wallet"
crate-type = ["cdylib", "rlib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true }
gasless-common = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
