[package]
name = "token_gating"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = "22.0.1"
gasless-common = { path = "../../gasless-common" }

[dev-dependencies]
soroban-sdk = { version = "22.0.1", features = ["testutils"] }
gasless-common = { path = "../../gasless-common", features = [] }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
